Add intro, minor additions

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -32,25 +32,24 @@
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date 1 & 1.0 & Notes\\
-Date 2 & 1.1 & Notes\\
+March 8 2023 & 1.0 & Initial draft\\
 \bottomrule
 \end{tabularx}
 
 ~\newpage
 
-\section{Symbols, Abbreviations and Acronyms}
+%\section{Symbols, Abbreviations and Acronyms}
+%
+%\renewcommand{\arraystretch}{1.2}
+%\begin{tabular}{l l} 
+%  \toprule		
+%  \textbf{symbol} & \textbf{description}\\
+%  \midrule 
+%  T & Test\\
+%  \bottomrule
+%\end{tabular}\\
 
-\renewcommand{\arraystretch}{1.2}
-\begin{tabular}{l l} 
-  \toprule		
-  \textbf{symbol} & \textbf{description}\\
-  \midrule 
-  T & Test\\
-  \bottomrule
-\end{tabular}\\
-
-\wss{symbols, abbreviations or acronyms -- you can reference the SRS tables if needed}
+%\wss{symbols, abbreviations or acronyms -- you can reference the SRS tables if needed}
 
 \newpage
 
@@ -64,7 +63,7 @@ Date 2 & 1.1 & Notes\\
 
 \pagenumbering{arabic}
 
-This document ...
+This document serves to record the results of testing and validation performed on the Olympian system, as well as any design decisions or changes made due to the results of said testing.
 
 \section{User Testing Summary}
 Unless Specified these tests were performed with a semi-structured interview where users were brought scenarios then asked questions relevant to that scenario. Most Scenarios followed the key use cases of the application.\\
@@ -93,10 +92,10 @@ Some example actions included: \\
 \end{enumerate}
 
 
-\noindent As for the non-user tests, manual unit tests were preformed in order to measure metrics.
+\noindent As for the non-user tests, manual unit tests were preformed in order to measure metrics.\\
 
 
-\noindent The summary of the test cases are displayed below.
+\noindent The summary of the test cases are displayed below:
 
 
 \begin{enumerate}
@@ -118,7 +117,6 @@ Some example actions included: \\
    
 \subsubsection{Exercise Tests}
     \item{\textbf{test-EX-1}}:Adding an Exercise to a Workout Routine.\\
-    	
     Input: A user created exercise with the parameters required for the exercise.
 
     Expected Output: The workout routine should include the added exercise.
