--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -244,9 +244,9 @@ Some example questions included: \\
 	\item Considering the navigation of this program was it hard to locate various operations and actions from any given point?
 \end{enumerate}
 
-\noindent As for the non-user tests, unit tests were preformed in order to measure metrics based on the application performance.
+\noindent As for the non-user tests, unit tests were preformed in order to measure metrics based on the application performance.\\
 
-\noindent The summary of the test cases are displayed below.
+\noindent The summary of the test cases are displayed below:
 
 \subsection{Look and Feel Testing}
 \begin{enumerate}
@@ -328,9 +328,9 @@ Some example questions included: \\
 	
 \end{enumerate}
 	
-\section{Comparison to Existing Implementation}	
-
-This section will not be appropriate for every project.
+%\section{Comparison to Existing Implementation}	
+%
+%This section will not be appropriate for every project.
 
 \section{Unit Testing}
 
