added test users 1 and 3

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -77,9 +77,10 @@ Examples include:
 	\item Creating an Exercise.
 	\item Searching for an Exercise.
 	\item Using the Discovery page to browse workouts and programs.
-	\item Finding new workouts from the Discovery page.
 	\item Starting a workout (as if the user were to use the application during their workout).
 \end{enumerate}
+
+See the raw user test results in the appendix.
 
 \section{Functional Requirements Evaluation}
 
@@ -366,6 +367,141 @@ graduate attribute of Lifelong Learning.  Please answer the following questions:
 \begin{enumerate}
   \item 
   \item 
+\end{enumerate}
+
+\newpage{}
+\section{Appendix: User testing Results}
+\subsection{User 1}
+Actions and results
+\begin{enumerate}
+\item Action: Creating an account
+
+Result: User successfully found path to creating an account without asking any questions.
+
+-	User liked that it was obvious what to do at each point
+-	User liked that they could undo actions and easily fix any errors with their password / email.
+
+\item Action: Logging into an account.
+
+Result: Success, user logged in without and issues
+
+-	User suggested that they should be automatically logged in once creating an account
+-	User liked the quickness of logging in
+
+\item Action: Creating a Program.
+
+Result: Success 
+
+-	Issues: no ‘create program button’ but there was a get started one which worked
+-	Liked the Tags
+-	Liked the simplicity of creating a program
+
+\item Action: Creating a Workout.
+
+Result: Success
+
+-	Liked the muscle categories with the visual
+
+-	Disliked repetition of adding exercises
+
+\item Action: Creating an Exercise.
+
+Result: Success
+
+-	Liked the muscle visual
+
+\item Action: Searching for an Exercise.
+
+Result: Success
+
+-	Liked the muscle visuals (again)
+
+-	Liked the auto addition to workout
+
+\item Action: Using the Discovery page to browse workouts and programs.
+
+Result: Success
+
+-	Liked the browse page categories
+
+-	Liked the simplicity in scrolling and searching
+
+
+\item Action: Starting a workout (as if the user were to use the application during their workout).
+
+Result: Fail
+
+-	User could not find out where to start workout and had to be directed
+\end{enumerate}
+
+\subsection{User 2}
+Actions and results
+\begin{enumerate}
+	\item blank
+\end{enumerate}
+
+\subsection{User 3}
+Actions and results
+\begin{enumerate}
+\item Action: Creating an account
+
+Result:  Success
+
+-	User stated that this was a very standard login (not that anything is wrong with that) and that they liked that we followed similar conventions
+
+\item Action: Logging into an account.
+
+Result: Success
+
+-	User suggested that the application logged in automatically after they created an account because it feels like it takes a while to even ‘enter’ the application
+
+
+\item Action: Creating a Program.
+
+Result: Success
+
+-	User Liked the simplicity and customization of the programs.
+
+-	User emphasised that they like the personalization and wishes to see even more such as suggestions for workouts based on their fitness goals.
+
+
+\item Action: Creating a Workout.
+
+Result: Success
+
+-	User said that this was exactly what they expected 
+
+\item Action: Creating an Exercise.
+
+Result: Success
+
+-	User liked the muscle visualizations and the little details into the primary and secondary muscles used in an exercise.
+
+-	User suggested that we make it more clear on certain muscle targets for different angles of a workout that could ‘hit’ different muscles
+
+
+\item Action: Searching for an Exercise.
+
+Result: Success
+
+-	User made a similar note on the muscle visualizations
+
+\item Action: Using the Discovery page to browse workouts and programs.
+
+Result: Success
+
+-	User found it fairly simple
+
+-	User liked the different workout tailored tasks such as ‘yoga’ or 
+
+
+\item Action: Starting a workout (as if the user were to use the application during their workout)
+Result:  Success
+
+-	User was wondering if there was a way to time their workouts for stuff like ’30 seconds of crunches’
+
+-	User liked the easy ‘flow’ of the workout
+
 \end{enumerate}
 
 \end{document}
