Template for unit testing documentation

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -333,6 +333,13 @@ Some example questions included: \\
 %This section will not be appropriate for every project.
 
 \section{Unit Testing}
+\begin{enumerate}
+	\item Put some test id here \\
+	Purpose:\\
+	Input:\\
+	Expected Output:\\
+	Test Result:\\
+\end{enumerate}
 
 \section{Changes Due to Testing}
 Listed below are some of the changes that are planned (some implemented) as a result of the testing and user testing.
