Add user testing results for User 2

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -437,7 +437,64 @@ Result: Fail
 \subsection{User 2}
 Actions and results
 \begin{enumerate}
-	\item blank
+	\item Action: Creating an account
+	
+	Result: User was able to successfully create an account by following the instructions provided at each stage
+	
+	-	User liked that they were able to submit their textbox by either hitting the "submit" button on their keyboard, or by tapping outside of the keyboard.
+	-	User liked that the account creation process was minimal and did not ask for excessive information.
+	
+	\item Action: Logging into an account.
+	
+	Result: Success, user logged in without and issues
+	
+	-	User suggested a "remember me" option for keeping the username field populated with their username on their device.
+	-	User was able to quickly log in.
+	
+	\item Action: Creating a Program.
+	
+	Result: Success 
+	
+	-	Issues: Did not like being limited by just 4 tags
+	-	Liked the feature of controlling the publicity of their program
+	-	Liked the smoothness of the program creation process.
+	
+	\item Action: Creating a Workout.
+	
+	Result: Fail
+	
+	-	Was unable to locate a clear "Create Workout" button
+	
+	\item Action: Creating an Exercise.
+	
+	Result: Success
+	
+	-	Liked the muscle visualization.
+	
+	- Suggested that a similar visualization could be done for cardio exercises, providing imagery for the user when selecting different types of cardio exercises.
+	
+	\item Action: Searching for an Exercise.
+	
+	Result: Success
+	
+	- Liked the straight-forward search process.
+	
+	\item Action: Using the Discovery page to browse workouts and programs.
+	
+	Result: Success
+	
+	-	Liked the preset categories
+	
+	-	Liked the trending programs display category
+	
+	-	Said it reminded them of the "Explore" page from Instagram
+	
+	
+	\item Action: Starting a workout (as if the user were to use the application during their workout).
+	
+	Result: Success
+	
+	-	User had no trouble starting their workout and following the instructions
 \end{enumerate}
 
 \subsection{User 3}
