Doc vnv report user tests raw data (#207)
* added test users 1 and 3

* Add user testing results for User 2

---------

Co-authored-by: BasselR <basselrezkalla@gmail.com>

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -74,9 +74,10 @@ Examples include:
 	\item Creating an Exercise.
 	\item Searching for an Exercise.
 	\item Using the Discovery page to browse workouts and programs.
-	\item Finding new workouts from the Discovery page.
 	\item Starting a workout (as if the user were to use the application during their workout).
 \end{enumerate}
+
+See the raw user test results in the appendix.
 
 \section{Functional Requirements Evaluation}
 
@@ -445,6 +446,198 @@ graduate attribute of Lifelong Learning.  Please answer the following questions:
 	The VnV plan differed from the actual activities that were performed in many ways, most notably the user testing. During user testing some actions that were a part of the test plan e.g. create a workout, the user may not know where to go. This seemed to be from a lack of software to user communications but this caused some of the testing to be performed a little differently. Occasionally we as testers would have to step in and assist the user (which is not what we wanted) to help them out.
 	 
 	In the VnV plan we stated that we would conduct surveys on some of the 'Aesthetics' of the design, however this was very tedious to do as a tester so we ended up asking the individuals we tested on about the look and feel of the application. As for looking at modifications towards the VnV plan and future plans, we should focus on the feasibility of what we say we are going to do vs what will actually be done. To give our team the benefit of the doubt there were many midterms and course work load build ups during this time that we did not anticipate for as well. Another way we deviated from the VnV plan was that large data-management testing is very difficult and takes some time. We were not able to complete certain tests such as data backups due to the complexity that this requires. 
+\end{enumerate}
+
+\newpage{}
+\section{Appendix: User testing Results}
+\subsection{User 1}
+Actions and results
+\begin{enumerate}
+\item Action: Creating an account
+
+Result: User successfully found path to creating an account without asking any questions.
+
+-	User liked that it was obvious what to do at each point
+-	User liked that they could undo actions and easily fix any errors with their password / email.
+
+\item Action: Logging into an account.
+
+Result: Success, user logged in without and issues
+
+-	User suggested that they should be automatically logged in once creating an account
+-	User liked the quickness of logging in
+
+\item Action: Creating a Program.
+
+Result: Success 
+
+-	Issues: no ‘create program button’ but there was a get started one which worked
+-	Liked the Tags
+-	Liked the simplicity of creating a program
+
+\item Action: Creating a Workout.
+
+Result: Success
+
+-	Liked the muscle categories with the visual
+
+-	Disliked repetition of adding exercises
+
+\item Action: Creating an Exercise.
+
+Result: Success
+
+-	Liked the muscle visual
+
+\item Action: Searching for an Exercise.
+
+Result: Success
+
+-	Liked the muscle visuals (again)
+
+-	Liked the auto addition to workout
+
+\item Action: Using the Discovery page to browse workouts and programs.
+
+Result: Success
+
+-	Liked the browse page categories
+
+-	Liked the simplicity in scrolling and searching
+
+
+\item Action: Starting a workout (as if the user were to use the application during their workout).
+
+Result: Fail
+
+-	User could not find out where to start workout and had to be directed
+\end{enumerate}
+
+\subsection{User 2}
+Actions and results
+\begin{enumerate}
+	\item Action: Creating an account
+	
+	Result: User was able to successfully create an account by following the instructions provided at each stage
+	
+	-	User liked that they were able to submit their textbox by either hitting the "submit" button on their keyboard, or by tapping outside of the keyboard.
+	-	User liked that the account creation process was minimal and did not ask for excessive information.
+	
+	\item Action: Logging into an account.
+	
+	Result: Success, user logged in without and issues
+	
+	-	User suggested a "remember me" option for keeping the username field populated with their username on their device.
+	-	User was able to quickly log in.
+	
+	\item Action: Creating a Program.
+	
+	Result: Success 
+	
+	-	Issues: Did not like being limited by just 4 tags
+	-	Liked the feature of controlling the publicity of their program
+	-	Liked the smoothness of the program creation process.
+	
+	\item Action: Creating a Workout.
+	
+	Result: Fail
+	
+	-	Was unable to locate a clear "Create Workout" button
+	
+	\item Action: Creating an Exercise.
+	
+	Result: Success
+	
+	-	Liked the muscle visualization.
+	
+	- Suggested that a similar visualization could be done for cardio exercises, providing imagery for the user when selecting different types of cardio exercises.
+	
+	\item Action: Searching for an Exercise.
+	
+	Result: Success
+	
+	- Liked the straight-forward search process.
+	
+	\item Action: Using the Discovery page to browse workouts and programs.
+	
+	Result: Success
+	
+	-	Liked the preset categories
+	
+	-	Liked the trending programs display category
+	
+	-	Said it reminded them of the "Explore" page from Instagram
+	
+	
+	\item Action: Starting a workout (as if the user were to use the application during their workout).
+	
+	Result: Success
+	
+	-	User had no trouble starting their workout and following the instructions
+\end{enumerate}
+
+\subsection{User 3}
+Actions and results
+\begin{enumerate}
+\item Action: Creating an account
+
+Result:  Success
+
+-	User stated that this was a very standard login (not that anything is wrong with that) and that they liked that we followed similar conventions
+
+\item Action: Logging into an account.
+
+Result: Success
+
+-	User suggested that the application logged in automatically after they created an account because it feels like it takes a while to even ‘enter’ the application
+
+
+\item Action: Creating a Program.
+
+Result: Success
+
+-	User Liked the simplicity and customization of the programs.
+
+-	User emphasised that they like the personalization and wishes to see even more such as suggestions for workouts based on their fitness goals.
+
+
+\item Action: Creating a Workout.
+
+Result: Success
+
+-	User said that this was exactly what they expected 
+
+\item Action: Creating an Exercise.
+
+Result: Success
+
+-	User liked the muscle visualizations and the little details into the primary and secondary muscles used in an exercise.
+
+-	User suggested that we make it more clear on certain muscle targets for different angles of a workout that could ‘hit’ different muscles
+
+
+\item Action: Searching for an Exercise.
+
+Result: Success
+
+-	User made a similar note on the muscle visualizations
+
+\item Action: Using the Discovery page to browse workouts and programs.
+
+Result: Success
+
+-	User found it fairly simple
+
+-	User liked the different workout tailored tasks such as ‘yoga’ or 
+
+
+\item Action: Starting a workout (as if the user were to use the application during their workout)
+Result:  Success
+
+-	User was wondering if there was a way to time their workouts for stuff like ’30 seconds of crunches’
+
+-	User liked the easy ‘flow’ of the workout
+
 \end{enumerate}
 
 \end{document}
